--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
 body {
-  background-color: black;
+  font-family: 'Montserrat', cursive;
+  overflow-x: hidden;
+  /* background-color: black; */
+  /* color: white; */
+
 }
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
