--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
 body {
   font-family: 'Montserrat', cursive;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* background-color: black; */
   /* color: white; */
 
