--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Black+Ops+One&family=Covered+By+Your+Grace&family=Dancing+Script:wght@400..700&family=Danfo&family=Faster+One&family=Ga+Maamli&family=Indie+Flower&family=Permanent+Marker&family=Ruslan+Display&family=Sankofa+Display&family=Tiny5&display=swap');
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
